WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202349
[GTK][WPE] Fix non-unified build issue caused by
r250440
https://bugs.webkit.org/show_bug.cgi?id=202349
Summary
[GTK][WPE] Fix non-unified build issue caused by r250440
Adrian Perez
Reported
2019-09-28 12:30:39 PDT
This one was introduced by
r250440
: ../Source/JavaScriptCore/dfg/DFGOSRExit.cpp:524:47: error: use of undeclared identifier 'OpGetById'; did you mean 'GetById'? bool doProfile = !instruction->is<OpGetById>() || instruction->as<OpGetById>().metadata(profiledCodeBlock).m_modeMetadata.mode == GetByIdMode::ArrayLength; ^~~~~~~~~ GetById
Attachments
Patch
(1.19 KB, patch)
2019-09-28 12:32 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2019-09-28 12:32:08 PDT
Created
attachment 379791
[details]
Patch
Mark Lam
Comment 2
2019-09-28 17:25:39 PDT
Comment on
attachment 379791
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2019-09-28 17:48:33 PDT
Comment on
attachment 379791
[details]
Patch Clearing flags on attachment: 379791 Committed
r250486
: <
https://trac.webkit.org/changeset/250486
>
WebKit Commit Bot
Comment 4
2019-09-28 17:48:34 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-09-28 17:49:18 PDT
<
rdar://problem/55812379
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug