[GTK][WPE] Fix non-unified build issue caused by r250440 https://bugs.webkit.org/show_bug.cgi?id=202349

Reviewed by Mark Lam.

* dfg/DFGOSRExit.cpp: Add missing inclusion of the BytecodeUseDef.h header.


Canonical link: https://commits.webkit.org/215887@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250486 268f45cc-cd09-0410-ab3c-d52691b4dbfc